<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_gravity="center"
    android:background="#f9f5f0">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnFindMentor"
        android:layout_alignRight="@+id/btnBeMentor"
        android:text="@string/welcome"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvMentorMenteeQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvWelcome"
        android:layout_alignRight="@+id/tvWelcome"
        android:layout_below="@+id/tvWelcome"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/mentor_mentee_question" />

    <Button
        android:id="@+id/btnFindMentor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnBeMentor"
        android:layout_below="@+id/tvMentorMenteeQuestion"
        android:layout_marginTop="18dp"
        android:background="@drawable/connectbtn"
        android:text="@string/find_a_mentor"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnBeMentor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/connectbtn"
        android:text="@string/be_a_mentor"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/or" />

</RelativeLayout>